[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-explorer"
version = "1.0.0"
description = "Interactive viewer for Claude Code session data"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Marcus Foster", email = "marcus@kaymo.ai"}
]
keywords = ["claude", "anthropic", "cli", "history", "explorer", "dashboard"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/kaymo-ai/claude-explorer"
Repository = "https://github.com/kaymo-ai/claude-explorer"
Issues = "https://github.com/kaymo-ai/claude-explorer/issues"

[project.scripts]
claude-explorer = "claude_explorer:main"

[tool.setuptools]
py-modules = ["claude_explorer"]
